# NexusScraper

./: .gitignore  makefile  pyproject.toml
Nexus/: __init__.py  exceptions.py  models.py  scrape.py
Nexus/scrapers/: orionoid.py  prowlarr.py
Nexus/utils/: request.py
tests/: test_annatar.py  test_apibay.py  test_jackett.py  test_orionoid.py  test_prowlarr.py  test_scrape.py  test_torbox.py  test_torrentio.py
