[tool.poetry]
name = "nexus-scraper"
version = "0.1.0"
description = ""
authors = ["Spoked <dreu.lavelle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
requests = "^2.31.0"
lxml = "^5.2.1"
xmltodict = "^0.13.0"

[tool.poetry.urls]
repository = "https://github.com/dreulavelle/NexusScraper"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
